--- a/client/src/app/login/form.tpl.html
+++ b/client/src/app/login/form.tpl.html
@@ -8,9 +8,9 @@
         </div>
         <form name="form" ng-submit="login()" >
             <label>E-mail</label>
-            <input name="login" type="email" ng-model="user.email" required autofocus autocomplete="false">
+            <input name="login" type="email" ng-model="user.email" required autofocus autocomplete="off">
             <label>Password</label>
-            <input name="pass" type="password" ng-model="user.password" required autocomplete="false">
+            <input name="pass" type="password" ng-model="user.password" required autocomplete="off">
         </form>
     </div>
     <div class="modal-footer">
